--- a/css/styles.css
+++ b/css/styles.css
@@ -371,7 +371,7 @@ img {
   padding-bottom: 84px;
 }
 
-.clients {
+.clients-list {
   display: flex;
   gap: 30px;
 }
@@ -398,25 +398,23 @@ img {
 }
 
 /* footer */
-.footer .container {
+.footer {
+  padding: 60px 0;
+  background-color: var(--background-color);
+}
+
+.main-block {
   display: flex;
-  padding-right: 15px;
-  padding-left: 15px;
   align-items: baseline;
   gap: 70px;
 }
 
-.foter-block {
+.footer-block {
   min-width: 231px;
 }
 
 .adress-style {
   font-style: normal;
-}
-
-.footer {
-  padding: 60px 0;
-  background-color: var(--background-color);
 }
 
 .footer-logo {
@@ -540,23 +538,13 @@ img {
 .portfolio-button:focus:focus {
   color: var(--primery-white-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .project {
   display: flex;
   flex-wrap: wrap;
 }
-
-/* .project-item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  background: var(--background-white-color);
-  border: 1px solid #eeeeee;
-} */
 
 .project-item {
   width: calc((100% - 60px) / 3);
@@ -579,8 +567,6 @@ img {
   color: var(--primery-text-color);
 }
 
-.project-img:hover,
-.project-img:focus,
 .project-link:hover,
 .project-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -599,6 +585,8 @@ img {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+
+  color: var(--primery-black-color);
 }
 
 .project-text {
